--- a/index.html
+++ b/index.html
@@ -8,46 +8,34 @@
 	<title>Document</title>
 </head>
 <body>
-	<header>
-
-	</header>
+	<div class="wrapper">
 <main>
 	<h2>What Customes Say</h2>
-<div class="main-2">
-<p>
+<p class="main-2">
 	Why sir end believe uncivil respect. Always get adieus nature day course for common.
 	My little garret repair to desire he esteem.
 </p>
-</div>
 <div class="main-3">
-<div class="main-3-1">
-<h3>Great service!!!</h3>
-</div>
+<h3 class="main-3-1">Great service!!!</h3>
 <div class="main-3-2">
 “On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the
 charms of pleasure.Blessing welcomed ladyship she met humoured sir breeding her. Six curiosity day assurance bed
 necessary.”
 </div>
-<div class="main-3-3">
 <div class="main-3-3-1">
-	<img src="img/Star 1.png" alt="звезда">
-	<img src="img/Star 1.png" alt="звезда">
-	<img src="img/Star 1.png" alt="звезда">
-	<img src="img/Star 1.png" alt="звезда">
-	<img src="img/Star 1.png" alt="звезда">
+	<img src="img/Star.png" alt="звезда">
+	<img src="img/Star.png" alt="звезда">
+	<img src="img/Star.png" alt="звезда">
+	<img src="img/Star.png" alt="звезда">
+	<img src="img/Star.png" alt="звезда">
 </div>
-<div class="main-3-3-2">
 	<div class="main-3-3-2-1"><h5>Dragos Gontariu</h5></div>
 	<div class="main-3-3-2-2"><h5>Mareting Manager</h5></div>
 </div>
-</div>
-</div>
 <div class="main-4">
-	<img src="img/image 14.png" alt="Мужик">
+	<img class="img-1" src="img/image 14.png" alt="Мужик">
 </div>
 </main>
-<footer>
-
-</footer>
+</div>
 </body>
 </html>
