--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ necessary.”
 	<div class="main-3-3-2-2"><h5>Mareting Manager</h5></div>
 </div>
 <div class="main-4">
-	<img class="img-1" src="img/image 14.png" alt="Мужик">
+	<img src="img/image 14.png" alt="Мужик">
 </div>
 </main>
 </div>
